--- a/config.org
+++ b/config.org
@@ -84,29 +84,30 @@
 Note try (setq left-margin-width 20) and (set-window-margins (selected-window) 20 20)
 Note: (internal-border-width . 40) is linked with emacs.internalBorder: 40 Emacs.InternalBorder: 40 in .Xresources
 #+begin_src emacs-lisp
-      (setq default-frame-alist '((font . "Bront 13")))
-      (setq whitespace-line-column 999)
-      (set-face-bold-p 'bold nil)
-      (setq-default left-margin-width 4 right-margin-width 2) ; Define new widths.
-      (set-window-buffer nil (current-buffer)) 
+  (setq default-frame-alist '((font . "Bront 13")))
+  (setq whitespace-line-column 999)
+  (set-face-bold-p 'bold nil)
+  ;; (setq-default left-margin-width 4 right-margin-width 2) ; Set down because to much margin with built-in linums
+  (setq-default left-margin-width 0 right-margin-width 0) ; Define new widths.
+  (set-window-buffer nil (current-buffer)) 
 
-      ;; (set-face-attribute 'default nil :height 120)
-      ;; (set-default-font "Noto Sans 12")
-      ;; (set-default-font "Fira Mono 12")
-      ;; (add-to-list 'default-frame-alist '(font . "Overpass Mono 11"))
-      ;; DejaVuSansMono FTW!!!
-      ;; (add-to-list 'default-frame-alist '(font . "DejaVu Sans Mono 11"))
-      ;; (add-to-list 'default-frame-alist '(font . "Bront 13")) ;; love dis font omfg! gives me apple vibes on linux
-      ;; (add-to-list 'default-frame-alist '(font . "Hack 12"))
-      ;; (add-to-list 'default-frame-alist '(font . "Fira Mono 12"))
-      ;; (add-to-list 'default-frame-alist '(font . "Input Mono Light"))
-      ;; (set-default-font "Fira Code 12")
-      ;; (set-default-font "Hack 12")
-      ;; (set-default-font "Inconsolata 14")
-      ;; (set-default-font "Droid Sans Mono for Powerline Plus Nerd File Types Mono 13")
-      ;;  (set-fringe-mode 0) ;; deactivates gutters at screen edges on linebreak
-      ;; (set-window-fringes (selected-window) 0 0 nil)
-      ;; (setq whitespace-style '(faces spaces indentation))
+  ;; (set-face-attribute 'default nil :height 120)
+  ;; (set-default-font "Noto Sans 12")
+  ;; (set-default-font "Fira Mono 12")
+  ;; (add-to-list 'default-frame-alist '(font . "Overpass Mono 11"))
+  ;; DejaVuSansMono FTW!!!
+  ;; (add-to-list 'default-frame-alist '(font . "DejaVu Sans Mono 11"))
+  ;; (add-to-list 'default-frame-alist '(font . "Bront 13")) ;; love dis font omfg! gives me apple vibes on linux
+  ;; (add-to-list 'default-frame-alist '(font . "Hack 12"))
+  ;; (add-to-list 'default-frame-alist '(font . "Fira Mono 12"))
+  ;; (add-to-list 'default-frame-alist '(font . "Input Mono Light"))
+  ;; (set-default-font "Fira Code 12")
+  ;; (set-default-font "Hack 12")
+  ;; (set-default-font "Inconsolata 14")
+  ;; (set-default-font "Droid Sans Mono for Powerline Plus Nerd File Types Mono 13")
+  ;;  (set-fringe-mode 0) ;; deactivates gutters at screen edges on linebreak
+  ;; (set-window-fringes (selected-window) 0 0 nil)
+  ;; (setq whitespace-style '(faces spaces indentation))
 #+end_src
 
 ** Modeline
