--- a/config.org
+++ b/config.org
@@ -81,15 +81,24 @@
 #+end_src
 
 ** General
+This is the font I searched that was used as default when no font was set (pretty nice)
+=(add-to-list 'default-frame-alist '(font . "SourceCodePro 10"))=
+
+
+
 Note try (setq left-margin-width 20) and (set-window-margins (selected-window) 20 20)
 Note: (internal-border-width . 40) is linked with emacs.internalBorder: 40 Emacs.InternalBorder: 40 in .Xresources
 #+begin_src emacs-lisp
-(setq default-frame-alist '((font . "Bront 13")))
+;; (setq default-frame-alist '((font . "Bront 13")))
+;; (setq default-frame-alist '((font . "SourceCodePro 11")))
+(setq default-frame-alist '((font . "Hack 11")))
 (setq whitespace-line-column 999)
 (set-face-bold-p 'bold nil)
 ;; (setq-default left-margin-width 4 right-margin-width 2) ; Set down because to much margin with built-in linums
 (setq-default left-margin-width 0 right-margin-width 0) ; Define new widths.
 (set-window-buffer nil (current-buffer)) 
+
+
 
 ;; (set-face-attribute 'default nil :height 120)
 ;; (set-default-font "Noto Sans 12")
